html of home page finished and footer

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,12 +9,31 @@
 <body>
     <%- include('partials/header') %>
     <main>
-    <div>
-        <h2>PHASE READY is where chaos meets a plan.</h2>
-        <p>We'll take you from "I'm lost" to full-on Jedi, with pracical skills, honesst advice, and a roadmap that works.</p>
-    </div>
-    <img src="" alt="Phase Ready logo">
-    
+        <div>
+            <h2>PHASE READY is where chaos meets a plan.</h2>
+            <p>We'll take you from "I'm lost" to full-on Jedi, with pracical skills, honesst advice, and a roadmap that works.</p>
+        </div>
+        <img src="/images/Phase_Ready_logo.png" alt="Phase Ready logo">
+        <div class="home_videos">
+            <div class="v_spotlight">
+                <p>Video Spotlight</p>
+                <iframe src="" frameborder="0"></iframe>
+            </div>
+            <div class="recent_podcast">
+                <p>Most Recent Podcast</p>
+                <iframe src="" frameborder="0"></iframe>
+            </div>
+        </div>
+        <div class="home_takeMeTo_btns">
+            <button class="takeMeTo_phases">Take me to the phases</button>
+            <button class="home_btns">Merch</button>
+            <button class="home_btns">Book</button>
+            <button class="home_btns">Products</button>
+            <button class="home_btns">Videos</button>
+        </div>
+        <div class="global_crisis_watch"></div>
     </main>
+    <%- include('partials/footer') %>
+
 </body>
 </html>
