--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -13,7 +13,8 @@
     <% videos.forEach(video => { %>
         <div>
             <h2><%= video.title %></h2>
-            <iframe width="560" height="315" src="<%= video.url %>" frameborder="0" allowfullscreen></iframe>
+            <!-- <iframe width="560" height="315" src="<%= video.url %>" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+            <iframe width="560" height="315" src="<%= video.url %>" title="<%= video.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     <% }); %>
 </body>
