home page styles

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,11 +9,11 @@
 <body>
     <%- include('partials/header') %>
     <main>
-        <div>
+        <div class="intro-msg">
             <h2>PHASE READY is where chaos meets a plan.</h2>
-            <p>We'll take you from "I'm lost" to full-on Jedi, with pracical skills, honesst advice, and a roadmap that works.</p>
+            <p>We'll take you from "I'm lost" to full-on Jedi, with pracical skills, honest advice, and a roadmap that works.</p>
         </div>
-        <img src="/images/Phase_Ready_logo.png" alt="Phase Ready logo">
+        <img id="logo" src="/images/Phase_Ready_logo400px.png" alt="Phase Ready logo">
         <div class="home_videos">
             <div class="v_spotlight">
                 <p>Video Spotlight</p>
