--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,15 @@
 <header>
-    <a href="/">
-        <h1>Phase Ready</h1>
-    </a>
     <nav>
+        <a href="/" id="logo_text">
+            <h1>Phase Ready</h1>
+        </a>
         <a href="/phases">Phases</a>
         <a href="/resources">Resources</a>
         <a href="/merch">Merch</a>
         <a href="/book">Book</a>
         <a href="/videos">Videos</a>
     </nav>
-    <div class="auth-buttons">
+    <div class="auth-btns">
         <button>Subscribe</button>
         <button>Login</button>
     </div>
