--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,11 +25,11 @@
             </div>
         </div>
         <div class="home_takeMeTo_btns">
-            <button class="takeMeTo_phases">Take me to the phases</button>
-            <button class="home_btns">Merch</button>
-            <button class="home_btns">Book</button>
-            <button class="home_btns">Products</button>
-            <button class="home_btns">Videos</button>
+            <button class="takeMeTo_phases">TAKE ME TO THE PHASES</button>
+            <button class="home_btns">MERCH</button>
+            <button class="home_btns">BOOK</button>
+            <button class="home_btns">PRODUCTS</button>
+            <button class="home_btns">VIDEOS</button>
         </div>
         <div class="global_crisis_watch"></div>
     </main>
