--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phase Ready - Home</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
+
     <%- include('partials/header') %>
-    <main>
         <div class="intro-msg">
             <h2>PHASE READY is where chaos meets a plan.</h2>
             <p>We'll take you from "I'm lost" to full-on Jedi, with pracical skills, honest advice, and a roadmap that works.</p>
@@ -27,13 +18,9 @@
         <div class="home_takeMeTo_btns">
             <button class="takeMeTo_phases">TAKE ME TO THE PHASES</button>
             <button class="home_btns">MERCH</button>
-            <button class="home_btns">BOOK</button>
+            <button class="home_btns">MENU</button>
             <button class="home_btns">PRODUCTS</button>
-            <button class="home_btns">VIDEOS</button>
+            <button class="home_btns">PODCASTS</button>
         </div>
         <div class="global_crisis_watch"></div>
-    </main>
     <%- include('partials/footer') %>
-
-</body>
-</html>
