--- a/src/views/podcasts.ejs
+++ b/src/views/podcasts.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phase Ready - Videos</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
     <%- include('partials/header') %>
-    <h1>Emergency Preparedness Videos</h1>
+    <h1>Emergency Preparedness Podcasts</h1>
 
     <% videos.forEach(video => { %>
         <div>
@@ -17,5 +8,7 @@
             <iframe width="560" height="315" src="<%= video.url %>" title="<%= video.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     <% }); %>
-</body>
-</html>
+
+    
+    <%- include('partials/footer') %>
+
