--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Anaheim:wght@400..800&family=Italiana&family=Lora:ital,wght@0,400..700;1,400..700&family=Radley:ital@0;1&family=Roboto+Slab:wght@100..900&family=Shippori+Mincho:wght@400;500;600;700;800&family=Space+Grotesk:wght@300..700&display=swap');
 
+
+/* Flash Message Styles */
+.alert {
+    padding: 1rem 1.5rem;
+    margin: 1rem 0;
+    border-radius: 4px;
+    border-left: 4px solid;
+    background-color: #f5f5f5;
+}
+
+.alert p {
+    margin: 0.5rem 0;
+}
+
+.alert p:first-child {
+    margin-top: 0;
+}
+
+.alert p:last-child {
+    margin-bottom: 0;
+}
+
+/* Success messages - green */
+.alert.success {
+    background-color: #e8f5e9;
+    border-left-color: #4caf50;
+    color: #2e7d32;
+}
+
+/* Error messages - red */
+.alert.error {
+    background-color: #ffebee;
+    border-left-color: #f44336;
+    color: #c62828;
+}
+
+/* Warning messages - orange */
+.alert.warning {
+    background-color: #fff3e0;
+    border-left-color: #ff9800;
+    color: #e65100;
+}
+
+/* Info messages - blue */
+.alert.info {
+    background-color: #e3f2fd;
+    border-left-color: #2196f3;
+    color: #1565c0;
+}
+
+
 body {
     margin: 0;
     font-family: "Anaheim", sans-serif;
     background-color: #262334;
-    color: whitesmoke;
+    color: #f8f8fb;
 }
 
 
@@ -13,13 +64,13 @@ body {
 header {
     background-color: #262334;
     /* background-color: rgb(27, 27, 101); */
-    color: whitesmoke;
+    color: #f8f8fb;
     display: grid;
     grid-template-columns: auto 30%;
 }
 
 header a {
-    color: whitesmoke;
+    color: #f8f8fb;
     text-decoration: none;
 }
 
@@ -47,16 +98,17 @@ header nav a:hover {
 
 .auth-btns button {
     margin: 10px 0;
-    background-color: #262334;
-    border-radius: 50%;
-    padding: 5px;
-    width: 90px;
-    border: 2px solid white;
-    color: white;
+    background-color: #353050;
+    border-radius: 15px;
+    padding: 7px 10px;
+    /* width: 90px; */
+    border: 2px solid #f8f8fb;
+    color: #f8f8fb;
+;
     box-shadow: black 1px 3px 6px 0px;
 
     &:hover {
-        background-color: white;
+        background-color: #f8f8fb;
         color: #262334;
         border: 3px solid #bb4032;
         cursor: pointer;
@@ -71,7 +123,7 @@ header nav a:hover {
 .intro-msg {
     text-align: center;
     background-color: #000000;
-    color: rgb(226, 226, 250);
+    color: #f8f8fb;
     padding: 20px;
 }
 
@@ -84,7 +136,7 @@ header nav a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    color: white;
+    color: #f8f8fb;
 }
 
 .home_videos div {
@@ -109,7 +161,7 @@ header nav a:hover {
     margin-top: 10px;
     padding: 10px;
     font-weight: bold;
-    color: whitesmoke;
+    color: #f8f8fb;
     background-color: #b02f1e;
     border-radius: 12px;
     cursor: pointer;
@@ -129,7 +181,7 @@ header nav a:hover {
 
 /* Footer */
 footer {
-    color: whitesmoke;
+    color: #f8f8fb;
     display: flex;
     justify-content: space-between;
     padding-left: 10%;
