added edit, update, and delete up users

--- a/src/views/forms/registration/form.ejs
+++ b/src/views/forms/registration/form.ejs
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">
         <label for="confirmPassword">Confirm Password*</label>
-        <input type="password" id="ConfirmPassword" name="ConfirmPassword" placeholder="Please Confirm Your Password" minlength="8" required pattern="(?=.*[0-9])(?=.*[!@#$%^&*]).*">
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Please Confirm Your Password" minlength="8" required pattern="(?=.*[0-9])(?=.*[!@#$%^&*]).*">
     </div>
     <p>Your password must be a minimum of 8 characters and include a number (0-9) and one or more of these characters !@#$%^&*</p>
     <button type="submit">Submit Registration Form</button>
