--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,13 +3,13 @@
         <p>Phase Ready &copy; <%= currentYear %></p>
         <nav>
             <a href="facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="facebook">
+                <img src="/images/facebook.png" alt="facebook">
             </a>
             <a href="twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter">
+                <img src="/images/twitter.png" alt="twitter">
             </a>        
             <a href="instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram">
+                <img src="/images/instagram.png" alt="instagram">
             </a>
         </nav>
     </footer>
