--- a/src/views/forms/registration/list.ejs
+++ b/src/views/forms/registration/list.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header') %>
 <div class="intro-msg">
     <h1><%= title %></h1>
-    <p>View and Edit All User account here!</p>
+    <p>View and Edit All User account here</p>
 </div>
 
 <% if (allRegisteredUsers && allRegisteredUsers.length > 0) { %>
