--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,8 +3,8 @@ a {
     color: #f8f8fb;
 }
 .login-form {
-    max-width: 500px;
-    margin: 2rem auto;
+    max-width: 600px;
+    margin: 4rem auto;
     padding: 2rem;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -60,5 +60,21 @@ a {
         &:active {
             transform: translateY(1px);
         }
+    }
+}
+
+/* Dashboard */
+.user-info {
+    max-width: 600px;
+    margin: 4rem auto;
+    padding: 2rem;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f8f8fb;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    color: black;
+
+    p, a {
+        color: black;
     }
 }
