--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -13,5 +13,8 @@
             </a>
         </nav>
     </footer>
+    <script type="module" src="/js/dropdown.js"></script>
+    <script type="module" src="/js/roleDropdown.mjs"></script>
+
 </body>
 </html>
