Created podcasts table

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -103,7 +103,7 @@ a {
 
 .logout-button {
     display: inline-block;
-    margin-right: 10px;
+    margin-top: 12px;
     text-decoration: none;
     padding: 0rem 2.4rem;
     background-color: #353050;
