--- a/src/views/podcasts.ejs
+++ b/src/views/podcasts.ejs
@@ -1,14 +1,17 @@
-    <%- include('partials/header') %>
-    <h1>Emergency Preparedness Podcasts</h1>
+<%- include('partials/header') %>
+<div class="intro-msg">
+    <h1><%= title %></h1>
+    <p><a href="/register">Register here</a> to begin saving your favorite podcasts.</p>
+</div>
 
-    <% videos.forEach(video => { %>
-        <div>
-            <h2><%= video.title %></h2>
-            <!-- <iframe width="560" height="315" src="<%= video.url %>" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
-            <iframe width="560" height="315" src="<%= video.url %>" title="<%= video.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    <% }); %>
+<% videos.forEach(video => { %>
+    <div>
+        <h2><%= video.title %></h2>
+        <!-- <iframe width="560" height="315" src="<%= video.url %>" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+        <iframe width="560" height="315" src="<%= video.url %>" title="<%= video.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+<% }); %>
 
-    
-    <%- include('partials/footer') %>
+
+<%- include('partials/footer') %>
 
