attempt at podcast page

--- a/src/views/forms/login/dashboard.ejs
+++ b/src/views/forms/login/dashboard.ejs
@@ -20,6 +20,7 @@
             %>
             <% if (isAdmin) { %>
                 <a href="/users">View and edit all users</a>
+                <a href="/podcasts/upload-video">Upload Podcast</a>
             <% } %>
         <% } %>
     <% } %>
