--- a/src/views/podcasts/edit.ejs
+++ b/src/views/podcasts/edit.ejs
@@ -1,7 +1,23 @@
 <%- include('../partials/header') %>
 <div class="intro-msg">
     <h1><%= title %></h1>
-    <p><a href="/register"></a>.</p>
+    <p>Edit podcast info here.</p>
 </div>
+
+<form class="edit-form" action="/podcasts<%= podcast.id %>" method="post">
+    <div class="form-group">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" value="<%= podcast.title %>" minlength="5" required>
+    </div>
+    <div class="form-group">
+        <label for="description">Description:</label>
+        <input type="text" id="description" name="description" value="<%=podcast.description %>" maxlength="250" required>
+    </div>
+    <div class="form-group">
+        <label for="url">URL:</label>
+        <input type="url" id="url" name="url" value="<%= podcast.url %>" maxlength="150" required>
+    </div>
+    <button class="update-podcast" type="submit" onclick="return confirm('Update this podcast?')">Update Podcast</button>
+</form>
 
 <%- include('../partials/footer') %>
