--- a/src/views/podcasts/edit.ejs
+++ b/src/views/podcasts/edit.ejs
@@ -4,7 +4,7 @@
     <p>Edit podcast info here.</p>
 </div>
 
-<form class="edit-form" action="/podcasts<%= podcast.id %>" method="post">
+<form class="edit-form" action="/podcasts/<%= podcast.id %>/update" method="post">
     <div class="form-group">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="<%= podcast.title %>" minlength="5" required>
@@ -18,6 +18,9 @@
         <input type="url" id="url" name="url" value="<%= podcast.url %>" maxlength="150" required>
     </div>
     <button class="update-podcast" type="submit" onclick="return confirm('Update this podcast?')">Update Podcast</button>
+    <p>Return to all <a href="/podcasts">podcasts</a></p>
 </form>
+
+
 
 <%- include('../partials/footer') %>
