--- a/src/views/resources.ejs
+++ b/src/views/resources.ejs
@@ -1,4 +1,7 @@
     <%- include('partials/header') %>
-
+<div class="intro-msg">
+    <h1><%= title %></h1>
+    <p>Resources Coming Soon!</p>
+</div>
     <%- include('partials/footer') %>
 
