added css to podcasts page and headers on all other pages

--- a/src/views/podcasts/edit.ejs
+++ b/src/views/podcasts/edit.ejs
@@ -18,7 +18,10 @@
         <input type="url" id="url" name="url" value="<%= podcast.url %>" maxlength="150" required>
     </div>
     <button class="update-podcast" type="submit" onclick="return confirm('Update this podcast?')">Update Podcast</button>
-    <p>Return to all <a href="/podcasts">podcasts</a></p>
+    <div class="go-back-btns">
+
+        <p>Return to all <a href="/podcasts">podcasts</a></p>
+    </div>
 </form>
 
 
