--- a/src/views/podcasts/list.ejs
+++ b/src/views/podcasts/list.ejs
@@ -14,7 +14,7 @@
             <div class="podcast-card">
                 <div class="podcast-info">
                     <h3>Episode: <%= podcast.title %></h3>
-                    <iframe width="560" height="315" src="<%= podcast.url %>" title="<%= podcast.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe src="<%= podcast.url %>" title="<%= podcast.title %>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p>Episode Description: <%= podcast.description %></p>                    
                 </div>
 
